@@ -13,6 +13,17 @@ Documentation
 Features
 --------
 
+- For behavior like Django's ``APPEND_SLASH=True``, use the
+  ``repoze.bfg.view.append_slash_notfound_view`` view as the Not Found
+  view in your application.  When this view is the Not Found view
+  (indicating that no view was found), and any routes have been
+  defined in the configuration of your application, if the value of
+  ``PATH_INFO`` does not already end in a slash, and if the value of
+  ``PATH_INFO`` *plus* a slash matches any route's path, do an HTTP
+  redirect to the slash-appended PATH_INFO.  Note that this will
+  *lose* ``POST`` data information (turning it into a GET), so you
+  shouldn't rely on this to redirect POST requests.
+
 - Speed up ``repoze.bfg.location.lineage`` slightly.
 
 - Speed up ``repoze.bfg.encode.urlencode`` (nee'
